[package]
name = "async-timers"
version = "0.1.4"
edition = "2021"
repository = "https://github.com/Blyschak/async-timers"
license = "Unlicense"
keywords = ["async-io", "tokio", "timers"]
categories = ["asynchronous"]
description = "Provides asynchronous timer primitives"
homepage = "https://github.com/Blyschak/async-timers"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.1", features = ["time"] }
futures = "0.3.21"

[dev-dependencies]
tokio = { features = ["full"] }
